@@ -1,4 +1,7 @@
 2.2.8
+- Features
+  - openSUSE: support systemd
+
 - Bindings
   - Ruby: Provide a default implementation of auth_request_callback
   - Ruby: Support Ruby 1.9
